name:                servant-generate
version:             0.1.1

synopsis:            Utilities for generating mock server implementations
description:         Utilities for generating mock server implementations
                     .
                     See the documentation of the @Servant.Server.Generate@ module.
homepage:            https://github.com/alpmestan/servant-generate
bug-reports:         https://github.com/alpmestan/servant-generate
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2018 Alp Mestanogullari
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.1

source-repository head
  type:     git
  location: https://github.com/alpmestan/servant-generate.git

library
  exposed-modules:     Servant.Server.Generate
  build-depends:       base           >= 4.9  && <4.14,
                       servant        >= 0.15 && <0.18,
                       servant-server >= 0.15 && <0.18
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
